--- a/css.html
+++ b/css.html
@@ -100,22 +100,39 @@
         </div>
     </div>
 
-    <!-- Example Card -->
-    <div class="card mb-4 shadow-sm border-info">
+    <div class="row">
+    <!-- Example Card with CSS Code -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-info">
         <div class="card-body">
-            <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
-            <p class="card-text">
-                Example of styling a paragraph using CSS:
-            </p>
-            <pre>
+          <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
+          <p class="card-text">
+            Example of styling a paragraph using CSS:
+          </p>
+          <pre>
 p {
     color: blue;
     font-size: 18px;
     text-align: center;
 }
-            </pre>
+          </pre>
         </div>
+      </div>
     </div>
+
+    <!-- Output Demo -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-success">
+        <div class="card-body">
+          <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
+          <p class="card-text">Here’s how the styled paragraph looks:</p>
+          <div class="p-3 border rounded bg-white demo-output">
+            <p>This is a paragraph styled with CSS.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Conclusion Card -->
     <div class="card mb-4 shadow-sm border-warning">
