--- a/html.html
+++ b/html.html
@@ -102,14 +102,16 @@
         </div>
     </div>
 
-    <!-- Example Card -->
-    <div class="card mb-4 shadow-sm border-info">
+    <div class="row">
+    <!-- Example Card with Code -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-info">
         <div class="card-body">
-            <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
-            <p class="card-text">
-                A simple HTML structure looks like this:
-            </p>
-            <pre>
+          <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
+          <p class="card-text">
+            A simple HTML structure looks like this:
+          </p>
+          <pre>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
@@ -120,9 +122,25 @@
     &lt;p&gt;This is a paragraph.&lt;/p&gt;
   &lt;/body&gt;
 &lt;/html&gt;
-            </pre>
+          </pre>
         </div>
+      </div>
     </div>
+
+    <!-- Output Demo -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-success">
+        <div class="card-body">
+          <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
+          <p class="card-text">Here’s how the code looks when rendered:</p>
+          <div class="p-3 border rounded bg-white">
+            <h1>Hello, world!</h1>
+            <p>This is a paragraph.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Conclusion Card -->
     <div class="card mb-4 shadow-sm border-warning">
