--- a/bootstrap.html
+++ b/bootstrap.html
@@ -95,18 +95,35 @@
         </div>
     </div>
 
-    <!-- Example Card -->
-    <div class="card mb-4 shadow-sm border-info">
+    <div class="row">
+    <!-- Example Card with Bootstrap Button Code -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-info">
         <div class="card-body">
-            <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
-            <p class="card-text">
-                A simple Bootstrap button example:
-            </p>
-            <pre>
+          <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
+          <p class="card-text">
+            A simple Bootstrap button example:
+          </p>
+          <pre>
 &lt;button class="btn btn-primary"&gt;Click Me&lt;/button&gt;
-            </pre>
+          </pre>
         </div>
+      </div>
     </div>
+
+    <!-- Output Demo -->
+    <div class="col-md-6">
+      <div class="card mb-4 shadow-sm border-success">
+        <div class="card-body">
+          <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
+          <p class="card-text">Here’s how the Bootstrap button looks:</p>
+          <div class="p-3 border rounded bg-white">
+            <button class="btn btn-primary">Click Me</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Conclusion Card -->
     <div class="card mb-4 shadow-sm border-warning">
