--- a/bootstrap.html
+++ b/bootstrap.html
@@ -116,7 +116,7 @@
       <div class="card mb-4 shadow-sm border-success">
         <div class="card-body">
           <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
-          <p class="card-text">Here’s how the Bootstrap button looks:</p>
+          <p class="card-text">Here's how the Bootstrap button looks:</p>
           <div class="p-3 border rounded bg-white">
             <button class="btn btn-primary">Click Me</button>
           </div>
@@ -191,27 +191,21 @@
               <div class="col-md-3 mb-md-0 mb-3">
         
                 <!-- Links -->
-                <h5 class="text-uppercase">Contact me</h5>
+              <h5 class="text-uppercase">Contact me</h5>
         
                 <ul class="list-unstyled">
                   <li>
                     <a href="#!">
-                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-envelope"></i>
                     </a>
                   </li>
-                  <li>
-                    <a href="#!">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                  </li>
-                  <li>
                     <a href="#!">
                         <i class="bi bi-github"></i>
                     </a>
                   </li>
                   <li>
                     <a href="#!">
-                        <i class="bi bi-tiktok"></i>
+                        <i class="bi bi-linkedin"></i>
                     </a>
                   </li>
                 </ul>
