--- a/html.html
+++ b/html.html
@@ -132,7 +132,7 @@
       <div class="card mb-4 shadow-sm border-success">
         <div class="card-body">
           <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
-          <p class="card-text">Here’s how the code looks when rendered:</p>
+          <p class="card-text">Here's how the code looks when rendered:</p>
           <div class="p-3 border rounded bg-white">
             <h1>Hello, world!</h1>
             <p>This is a paragraph.</p>
@@ -216,22 +216,16 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#!">
-                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-envelope"></i>
                     </a>
                   </li>
-                  <li>
-                    <a href="#!">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                  </li>
-                  <li>
                     <a href="#!">
                         <i class="bi bi-github"></i>
                     </a>
                   </li>
                   <li>
                     <a href="#!">
-                        <i class="bi bi-tiktok"></i>
+                        <i class="bi bi-linkedin"></i>
                     </a>
                   </li>
                 </ul>
