--- a/index.html
+++ b/index.html
@@ -181,22 +181,16 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#!">
-                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-envelope"></i>
                     </a>
                   </li>
-                  <li>
-                    <a href="#!">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                  </li>
-                  <li>
                     <a href="#!">
                         <i class="bi bi-github"></i>
                     </a>
                   </li>
                   <li>
                     <a href="#!">
-                        <i class="bi bi-tiktok"></i>
+                        <i class="bi bi-linkedin"></i>
                     </a>
                   </li>
                 </ul>
