--- a/index.html
+++ b/index.html
@@ -180,17 +180,18 @@
         
                 <ul class="list-unstyled">
                   <li>
-                    <a href="#!">
-                        <i class="bi bi-envelope"></i>
+                    <a href="mailto:pallawitmg81@gmail.com">
+                      <i class="bi bi-envelope"></i> Email Me
                     </a>
+
                   </li>
-                    <a href="#!">
-                        <i class="bi bi-github"></i>
+                     <a href="https://www.linkedin.com/in/pallawi-tamang-dong-063b00365/" class="mx-2" target="_blank">
+                      <i class="bi bi-linkedin fs-3"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#!">
-                        <i class="bi bi-linkedin"></i>
+                    <a href="https://github.com/pallawiTamang" class="mx-2" target="_blank">
+                     <i class="bi bi-github fs-3"></i>
                     </a>
                   </li>
                 </ul>
