--- a/css.html
+++ b/css.html
@@ -99,38 +99,48 @@
     </div>
 
     <div class="row">
-    <!-- Example Card with CSS Code -->
-    <div class="col-md-6">
-      <div class="card mb-4 shadow-sm border-info">
-        <div class="card-body">
-          <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
-          <p class="card-text">
-            Example of styling a paragraph using CSS:
-          </p>
-          <pre>
+  <!-- Example Card with CSS Code -->
+  <div class="col-md-6">
+    <div class="card mb-4 shadow-sm border-info">
+      <div class="card-body">
+        <h3 class="card-title"><i class="bi bi-code text-info"></i> Example</h3>
+        <p class="card-text">
+          Example of styling a paragraph using CSS:
+        </p>
+        <pre>
 p {
     color: blue;
     font-size: 18px;
     text-align: center;
 }
-          </pre>
-        </div>
+        </pre>
       </div>
     </div>
+  </div>
 
-    <!-- Output Demo -->
-    <div class="col-md-6">
-      <div class="card mb-4 shadow-sm border-success">
-        <div class="card-body">
-          <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
-          <p class="card-text">Here's how the styled paragraph looks:</p>
-          <div class="p-3 border rounded bg-white demo-output">
-            <p>This is a paragraph styled with CSS.</p>
-          </div>
+  <!-- Output Demo -->
+  <div class="col-md-6">
+    <div class="card mb-4 shadow-sm border-success">
+      <div class="card-body">
+        <h3 class="card-title"><i class="bi bi-window text-success"></i> Output Demo</h3>
+        <p class="card-text">Here's how the styled paragraph looks:</p>
+        <div class="p-3 border rounded bg-white demo-output">
+          <p class="styled-paragraph">This is a paragraph styled with CSS.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Add this CSS in your style.css or inside a <style> tag -->
+<style>
+.demo-output .styled-paragraph {
+  color: blue;
+  font-size: 18px;
+  text-align: center;
+}
+</style>
+
 
     <!-- Conclusion Card -->
     <div class="card mb-4 shadow-sm border-warning">
