--- a/bootstrap.html
+++ b/bootstrap.html
@@ -64,7 +64,7 @@
             <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" alt="Bootstrap Logo" width="100" class="mb-3">
             <h1 class="text-primary fw-bold">Bootstrap</h1>
             <p class="fs-5 mt-2">
-                Bootstrap is a popular front-end framework that helps you design responsive and mobile-first websites quickly. It provides pre-designed components, layouts, and utilities so you can focus on content instead of writing all CSS from scratch.
+               Bootstrap is a popular front-end framework that facilitates the rapid development of responsive, mobile-friendly websites. By providing prebuilt components, grid layouts, and utility classes, it reduces the need for extensive custom CSS.
             </p>
         </div>
     </div>
@@ -74,7 +74,7 @@
         <div class="card-body">
             <h3 class="card-title"><i class="bi bi-info-circle-fill text-primary"></i> Overview</h3>
             <p class="card-text">
-                Bootstrap includes a responsive grid system, ready-to-use components like buttons, navbars, modals, and prebuilt CSS classes that make designing modern websites faster and easier.
+               Bootstrap features a responsive grid layout, pre-designed components like buttons, navigation bars, and modals, and built-in CSS classes, which streamline the process of creating modern web interfaces.
             </p>
         </div>
     </div>
@@ -128,7 +128,7 @@
         <div class="card-body">
             <h3 class="card-title"><i class="bi bi-lightbulb-fill text-warning"></i> Conclusion</h3>
             <p class="card-text">
-                Bootstrap simplifies web development by providing ready-made components and responsive layouts. Learning Bootstrap allows you to create professional-looking websites efficiently while focusing on functionality and content.
+                By offering ready-made components and responsive design tools, Bootstrap streamlines the development process, allowing developers to create polished websites while concentrating on functionality and content.
             </p>
         </div>
     </div>
@@ -150,8 +150,10 @@
               <div class="col-md-6 mt-md-0 mt-3">
         
                 <!-- Content -->
-                <h5 class="text-uppercase">Footer Content</h5>
-                <p>Here you can use rows and columns to organize your footer content.</p>
+                <h5 class="text-uppercase">About me</h5>
+                <p class="text-white">
+                  As a junior Full Stack Developer, I enjoy building dynamic and responsive web applications. This portfolio demonstrates my proficiency in frontend and backend technologies, including HTML, CSS, JavaScript, and Bootstrap.
+                </p>
         
               </div>
               <!-- Grid column -->
