--- a/css.html
+++ b/css.html
@@ -69,7 +69,7 @@
 
             <h1 class="text-primary fw-bold">CSS (Cascading Style Sheets)</h1>
             <p class="fs-5 mt-2">
-                CSS is used to style and layout web pages. While HTML provides the structure, CSS controls colors, fonts, spacing, and the overall look and feel of a website.
+              Cascading Style Sheets (CSS) are used to design and format web pages. Whereas HTML defines the structure, CSS determines the color scheme, font usage, spacing, and overall presentation of the website.
             </p>
         </div>
     </div>
@@ -79,8 +79,7 @@
         <div class="card-body">
             <h3 class="card-title"><i class="bi bi-info-circle-fill text-primary"></i> Overview</h3>
             <p class="card-text">
-                CSS allows you to separate content from presentation. You can style HTML elements using selectors, apply styles globally or locally, and create responsive designs for different devices.
-            </p>
+                CSS enables you to keep content separate from design. It lets you style HTML elements with selectors, apply styles globally or to specific elements, and build responsive layouts for various devices.
         </div>
     </div>
 
@@ -147,7 +146,7 @@ p {
         <div class="card-body">
             <h3 class="card-title"><i class="bi bi-lightbulb-fill text-warning"></i> Conclusion</h3>
             <p class="card-text">
-                CSS makes websites visually appealing and user-friendly. Learning CSS is essential for web development because it enhances the structure provided by HTML with style and interactivity.
+               CSS improves both the look and user experience of web pages. Understanding CSS is fundamental for web development, as it complements HTML’s structure with styling and interactive elements.
             </p>
         </div>
     </div>
@@ -169,8 +168,10 @@ p {
               <div class="col-md-6 mt-md-0 mt-3">
         
                 <!-- Content -->
-                <h5 class="text-uppercase">Footer Content</h5>
-                <p>Here you can use rows and columns to organize your footer content.</p>
+                <h5 class="text-uppercase">About me</h5>
+                <p class="text-white">
+                  As a junior Full Stack Developer, I enjoy building dynamic and responsive web applications. This portfolio demonstrates my proficiency in frontend and backend technologies, including HTML, CSS, JavaScript, and Bootstrap.
+                </p>
         
               </div>
               <!-- Grid column -->
