--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
               <div class="col-md-6 mt-md-0 mt-3">
         
                 <!-- Content -->
-                <h5 class="text-uppercase">Footer Content</h5>
-                <p>Here you can use rows and columns to organize your footer content.</p>
+                <h5 class="text-uppercase">About me</h5>
+                <p class="text-white">
+                  As a junior Full Stack Developer, I enjoy building dynamic and responsive web applications. This portfolio demonstrates my proficiency in frontend and backend technologies, including HTML, CSS, JavaScript, and Bootstrap.
+                </p>
         
               </div>
               <!-- Grid column -->
