--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       
       <!-- Left: Photo -->
       <div class="col-md-4 text-center">
-        <img src="photo/WhatsApp Image 2025-08-10 at 18.54.27_ca2b4a87.jpg" alt="Pallawi Tamang" class="img-fluid rounded-circle border border-3 border-white shadow" style="max-width: 250px;">
+        <img src="photo/WhatsApp Image 2025-08-10 at 18.54.27_ca2b4a87.jpg" alt="Pallawi Tamang Dong" class="img-fluid rounded-circle border border-3 border-white shadow" style="max-width: 250px;">
       </div>
       
       <!-- Right: Intro Text + Button -->
